<?xml version="1.0"?>
<package format="2">
  <name>pr_core</name>
  <version>0.0.0</version>
  <description>The pr_core package</description>

  <maintainer email="shreyverma.2000@gmail.com">Shrey Verma</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <metapackage />
  </export>

</package>