<?xml version="1.0"?>
<package format="2">
  <name>pr_gazebo</name>
  <version>0.0.0</version>
  <description>The pr_gazebo package</description>

  <maintainer email="shreyverma.2000@gmail.com">Shrey Verma</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
